syntax = "proto3";

package binout.alert;

option java_multiple_files = true;
option java_package = "binout.alert";
option java_outer_classname = "AlertProto";

message Alert {
  string alertId = 1;
  string userId = 2;
  string message = 3;
  string timestamp = 4;
}

message AlertRequest {
  string userId = 1;
}

message Ack {
  bool success = 1;
  string message = 2;
}

message AlertList {
  repeated Alert alerts = 1;
}

service AlertService {
  rpc SendAlert(Alert) returns (Ack);
  rpc GetAlerts(AlertRequest) returns (AlertList);
}
